exercise109/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 8080
